<resources>
    <string name="app_name">Ultra Scheduler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="new_event">New Event</string>
    <string name="month_year">MONTH + YEAR</string>
    <string name="actual_day">ACTUAL DAY</string>
    <string name="event">Event</string>
    <string name="task">Task</string>
    <string name="ok">OK</string>
    <string name="add_a_title">Add a title</string>
    <string name="all_day">All day</string>
    <string name="hour_form_display">HH::MM</string>
    <string name="month_form_display">DD MONTH YYYY</string>
    <string name="write_a_description">Write a description</string>
    <string name="save">Save</string>
    <string name="event_subject">EVENT SUBJECT</string>
    <string name="hour_display_event_view">HH:MM - HH:MM</string>
    <string name="notificationicon">notificationIcon</string>
    <string name="more_option_button">more option button</string>
    <string name="back_arrow">back_arrow</string>
    <string name="notification_mock">notif1\nnotif2\nnotif3</string>
    <string name="event_description_mock">desc</string>
    <string name="hour_mocker">hour_mocker</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="share">Share</string>
    <string name="ultra_scheduler">Ultra Scheduler</string>
    <string name="calendar_view">Calendar View</string>
    <string name="todo_tasks">Todo Tasks</string>
    <string name="planify_activities">Planify Activities</string>
    <string name="coming_soon">Coming SOON</string>
    <string name="error">ERROR</string>
</resources>