<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.event.EventFormFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:importantForAutofill="no"
        android:hint="@string/add_a_title"
        android:textColorHint="@color/light_gray"
        android:inputType="text|textMultiLine"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@android:color/darker_gray" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/isAllDaySwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/all_day"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:trackTint="@color/button_blue"
        app:thumbTint="@color/switch_thumb_tint"
        />

    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/dateStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/month_form_display"/>

            <TextView
                android:id="@+id/hourStart"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:text="@string/hour_form_display"
                android:textColor="@color/white"
                android:textSize="18sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/month_form_display"/>

            <TextView
                android:id="@+id/hourEnd"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:text="@string/hour_form_display"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_a_description"
        android:textColorHint="@color/light_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveEventBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_blue"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp"/>
</LinearLayout>