<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/ultra_scheduler"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:columnCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/calendarViewHomeCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/popup_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            android:clickable="true"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/calendar_view"
                android:textSize="20sp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/todoTasksHomeCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/popup_background"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/todo_tasks"
                android:textSize="20sp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/planifyHomeCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/popup_background"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/planify_activities"
                android:textSize="20sp"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/popup_background"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/coming_soon"
                android:textSize="20sp"/>

        </androidx.cardview.widget.CardView>

    </GridLayout>


</LinearLayout>