<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventCardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardCornerRadius="10dp"
    android:backgroundTint="@color/popup_background"
    tools:context=".ui.event.EventCardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_black"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backArrowBtn"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/baseline_arrow_back_24"
                android:background="@color/transparent_back"/>


            <TextView
                android:id="@+id/eventSubject"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:text="@string/event_subject"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/modifyBtn"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_gravity="center"
                android:contentDescription="@string/more_option_button"
                android:src="@drawable/baseline_mode_24"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="3dp"
                android:background="@color/transparent_back"
                android:focusable="true"
                android:clickable="true"
                />

            <ImageButton
                android:id="@+id/moreOptBtn"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/more_option_button"
                android:src="@drawable/baseline_more_vert_24"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:padding="3dp"
                android:background="@color/transparent_back"
                android:focusable="true"
                android:clickable="true"
                />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/eventDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/month_form_display"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:drawableStartCompat="@drawable/baseline_notifications_24"
                        android:layout_marginStart="3dp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/notification_mock"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        app:drawableStartCompat="@drawable/baseline_subject_24"/>

                    <TextView
                        android:id="@+id/eventDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_description_mock"
                        android:textColor="@color/white"/>

                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.cardview.widget.CardView>